--- a/package.json
+++ b/package.json
@@ -21,15 +21,21 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "angular-2-local-storage": "^1.0.1",
     "bcrypt": "^2.0.0",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0",
+    "bootstrap-social": "^5.1.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "mongoose": "^5.0.14",
     "password-hash": "^1.2.2",
+    "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
