--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "angular-2-local-storage": "^1.0.1",
+    "angular2-chartjs": "^0.5.1",
     "bcrypt": "^2.0.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
+    "chart.js": "^2.7.2",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
@@ -34,6 +36,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "mongoose": "^5.0.14",
+    "ng2-charts": "^1.6.0",
     "password-hash": "^1.2.2",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
